# owo_log_scraper

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/structs/: mod.rs  pet.rs  rank.rs  weapon.rs
